--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="logo.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+  
+  <title>TANISHK.art</title>
+  
 </head>
 <body>
     <div class="start">
